@@ -1,3 +1,7 @@
+2008-10-15  Sébastien Sablé  <sable@users.sourceforge.net>
+
+	* Sybase.py: Start using logging module
+
 2008-09-26  Sébastien Sablé  <sable@users.sourceforge.net>
 
 	* Sybase.py: Corrected invalid row count in fetchmany
